--- a/TomLonghurst.RedisClient/TomLonghurst.RedisClient.csproj
+++ b/TomLonghurst.RedisClient/TomLonghurst.RedisClient.csproj
@@ -9,6 +9,7 @@
     <PackageProjectUrl>https://github.com/thomhurst/A-sync-RedisClient</PackageProjectUrl>
     <PackageLicenseExpression>Apache-2.0</PackageLicenseExpression>
     <RepositoryUrl>https://github.com/thomhurst/A-sync-RedisClient</RepositoryUrl>
+    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
   </PropertyGroup>
 
   <ItemGroup>
