--- a/RedisClientTest/RedisClientTest.csproj
+++ b/RedisClientTest/RedisClientTest.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="JetBrains.dotMemoryUnit" Version="3.0.20171219.105559" />
     <PackageReference Include="nunit" Version="3.12.0" />
     <PackageReference Include="NUnit3TestAdapter" Version="3.13.0" />
     <PackageReference Include="Microsoft.NET.Test.Sdk" Version="16.2.0" />
@@ -15,6 +16,12 @@
 
   <ItemGroup>
     <ProjectReference Include="..\TomLonghurst.RedisClient\TomLonghurst.RedisClient.csproj" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Update="large_json.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
