--- a/RedisClientTest/RedisClientTest.csproj
+++ b/RedisClientTest/RedisClientTest.csproj
@@ -22,6 +22,9 @@
     <None Update="large_json.json">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="large_json2.json">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
