--- a/TomLonghurst.AsyncRedisClient/TomLonghurst.AsyncRedisClient.csproj
+++ b/TomLonghurst.AsyncRedisClient/TomLonghurst.AsyncRedisClient.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
-    <PackageVersion>0.0.86-alpha10</PackageVersion>
+    <PackageVersion>0.0.86-alpha12</PackageVersion>
     <Description>An Asynchronous Redis Client for .NET</Description>
     <Copyright>Tom Longhurst</Copyright>
     <PackageProjectUrl>https://github.com/thomhurst/A-sync-RedisClient</PackageProjectUrl>
@@ -14,7 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.IO.Pipelines" Version="4.6.0-preview9.19421.4" />
+    <PackageReference Include="System.IO.Pipelines" Version="4.6.0-rc1.19456.4" />
     <PackageReference Include="System.Net.Sockets" Version="4.3.0" />
   </ItemGroup>
 
