--- a/TomLonghurst.AsyncRedisClient/TomLonghurst.AsyncRedisClient.csproj
+++ b/TomLonghurst.AsyncRedisClient/TomLonghurst.AsyncRedisClient.csproj
@@ -14,7 +14,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="System.IO.Pipelines" Version="4.6.0-rc1.19456.4" />
+    <PackageReference Include="System.IO.Pipelines" Version="4.6.0" />
     <PackageReference Include="System.Net.Sockets" Version="4.3.0" />
   </ItemGroup>
 
