--- a/TomLonghurst.AsyncRedisClient/TomLonghurst.AsyncRedisClient.csproj
+++ b/TomLonghurst.AsyncRedisClient/TomLonghurst.AsyncRedisClient.csproj
@@ -18,6 +18,10 @@
     <PackageReference Include="System.Net.Sockets" Version="4.3.0" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Models\Commands" />
+  </ItemGroup>
+
   <PropertyGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch('$(TargetFramework)', '^net\d'))">
     <DefineConstants>NETFRAMEWORK</DefineConstants>
   </PropertyGroup>
