--- a/TomLonghurst.AsyncRedisClient/TomLonghurst.AsyncRedisClient.csproj
+++ b/TomLonghurst.AsyncRedisClient/TomLonghurst.AsyncRedisClient.csproj
@@ -22,7 +22,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Models\Commands" />
+    <AssemblyAttribute Include="System.Runtime.CompilerServices.InternalsVisibleToAttribute">
+      <_Parameter1>RedisClientTest</_Parameter1>
+    </AssemblyAttribute>
   </ItemGroup>
 
   <PropertyGroup Condition="$([System.Text.RegularExpressions.Regex]::IsMatch('$(TargetFramework)', '^net\d'))">
