--- a/RedisClientTest/RedisClientTest.csproj
+++ b/RedisClientTest/RedisClientTest.csproj
@@ -7,8 +7,8 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="JetBrains.dotMemoryUnit" Version="3.0.20171219.105559" />
-    <PackageReference Include="StackExchange.Redis" Version="2.0.601" />
+    <PackageReference Include="JetBrains.dotMemoryUnit" Version="3.2.20220510" />
+    <PackageReference Include="StackExchange.Redis" Version="2.8.16" />
     <PackageReference Include="Testcontainers.Redis" Version="3.10.0" />
     <PackageReference Include="TUnit" Version="0.1.1056" />
   </ItemGroup>
