--- a/.github/workflows/speed-comparison.yml
+++ b/.github/workflows/speed-comparison.yml
@@ -18,12 +18,6 @@ jobs:
           fetch-depth: 0
           persist-credentials: false
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-        
       - name: Setup .NET
         uses: actions/setup-dotnet@v4
         with:
@@ -31,7 +25,7 @@ jobs:
 
       - name: Run Benchmark
         run: sudo -E dotnet run -c Release --framework net9.0 --filter '*' --join
-        working-directory: "tools/speed-comparison/Tests.Benchmark"
+        working-directory: "/Benchmark"
 
       - name: Upload Markdown
         uses: actions/upload-artifact@v4
